case sensitivity note added

--- a/definitions.yaml
+++ b/definitions.yaml
@@ -797,7 +797,7 @@ receipt2:
           pattern:
         deviceId:
           type: string
-          description: Идентификатор устройства в формате `uuid4`.
+          description: Идентификатор устройства в формате `uuid4`. Чувствителен к регистру символов.
           pattern:
         storeId:
           type: string
