--- a/paths.yaml
+++ b/paths.yaml
@@ -209,7 +209,7 @@
        type: string
        description: |
          Ответ будет содержать документы, созданные после указанной даты. Формат времени - 2017-01-10T09:33:19.757+0000
-     - name: type
+     - name: types
        description: |
          Ответ будет содержать документы определенных типов. Можно указать несколько типов через запятую. Возможные значения:
          * кассовые документы - SELL,PAYBACK,CASH_INCOME,CASH_OUTCOME,OPEN_SESSION,FPRINT,CLOSE_SESSION.
