--- a/definitions.yaml
+++ b/definitions.yaml
@@ -103,7 +103,7 @@ SubscriptionCreated:
             - $ref: '#/planId'
         trialPeriodDuration:
           type: string
-          description: Срок бесплатного периода, выраженный в днях (P[n]DT).
+          description: Строка вида `PnDT`, где n – количество дней бесплатного периода, доступных пользователю в момент активации тарифа.
           example: P30DT
         deviceNumber:
           allOf:
@@ -980,5 +980,5 @@ productId:
 
 sequenceNumber:
   type: integer
-  description: Номер события в последовательности. Номер непрерывно возрастает начиная с единицы. Необходим для соблюдения порядка обработки событий.
+  description: Номер события в последовательности. Номер непрерывно возрастает начиная с единицы. Необходим для соблюдения порядка обработки событий. Номер события уникален в рамках подписки (`subscriptionId`), таким образом, при переустановке приложения номерация событий начнётся сначала
   example: 4
