smar-terminal roles fix

--- a/definitions.yaml
+++ b/definitions.yaml
@@ -511,11 +511,14 @@ employee:
     role:
       type: string
       description: |
-        Роль, которая задаёт права доступа сотрудника. В зависимости от прав, сотрудники имеют доступ к различным функциям смарт-терминала.
+        Роль, которая задаёт права доступа сотрудника. В зависимости от прав, сотрудники имеют доступ к различным функциям смарт-терминала:
+          * ADMIN – предустановленная роль администратора с полным доступом к функциям смарт-терминала.
+          * CASHIER – предустановленнная роль кассира с ограниченным доступом к функциям смарт-терминала.
+          * MANUAL – роль, которую пользователь создал вручную.
       enum:
         - ADMIN
         - CASHIER
-        - OTHER
+        - MANUAL
 
 
 store:
