Поправил Описание uuid товара в документах и при обмене товарами.

--- a/definitions.yaml
+++ b/definitions.yaml
@@ -191,9 +191,7 @@ product:
     uuid:
       type: string
       description: |
-        Уникальный идентификатор товара/группы в формате uuid4; уникален в рамках магазина; не может быть пустой строкой.
-
-        Для товара "Позиция по свободной цене", поле может принимать значение `null` или зарезервированное значение `390067bf-e8d3-4fcc-8c30-fbfd77a0a70d`.
+        Уникальный идентификатор товара/группы в формате uuid4; уникален в рамках магазина; не может быть `null` или пустой строкой.
       pattern: >-
         ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
     code:
