Гарантированная доставка событий биллинга

--- a/paths.yaml
+++ b/paths.yaml
@@ -790,7 +790,7 @@
       - Вебхуки-уведомления
     summary: 'События биллинга'
     description: |
-       Связанные с биллингом события, которые облако Эвотор передаёт в сторонний сервис.
+       Связанные с биллингом события, которые облако Эвотор передаёт в сторонний сервис. Облако выполняет попытки передать события в течение трёх суток, до тех пор пока не будет получен ответ об успешной доставке сообщения (200ОК). Интервал повторной отправки события около одной минуты.
     parameters:
       - name: Authorization
         in: header
