--- a/paths.yaml
+++ b/paths.yaml
@@ -612,6 +612,7 @@
             timestamp:
               type: number
               description: Время в миллисекундах, в Unix-формате.
+              example: 1496826444000001
             type:
               type: string
               description: Тип события.
@@ -635,7 +636,8 @@
                   pattern:
                 dateTime:
                   type: number
-                  description: Unix-время
+                  description: Дата и время в формате создания чека. [В соответствовии с ISO 8601](https://en.wikipedia.org/wiki/ISO_8601#Time_offsets_from_UTC)
+                  example: 2017-06-07T12:55:18Z
                 type:
                   type: string
                   description: Тип документа
