--- a/info.yaml
+++ b/info.yaml
@@ -4,8 +4,8 @@ description: |
    # О REST API Эвотор
    Пользователи платформы Эвотор могут расширить базовую функциональность смарт-терминала с помощью интеграции со сторонними сервисами. Для пользователя, интеграция происходит с помощью приложений, доступных в Магазине Эвотор.
 
-   После интеграции, сторонние сервисы могут взаимодействовать с данными пользователей платформы с помощью HTTP-запросов.
-   Кроме обращений к REST API облака, сторонние сервисы могут подписаться на вебхуки облака Эвотор
+   После интеграции, сторонние сервисы могут взаимодействовать с данными пользователей платформы с помощью HTTP-запросов. Обратите внимание, что добавление в тело запросов, которые передаёт облако, может происходить в любой момент. Изменение или удаление полей происходит после предварительного уведомления.
+   Кроме обращений к REST API облака, сторонние сервисы могут подписаться на вебхуки облака Эвотор.
    > С 1.06.2016 при работе с /api/v1/inventories/* Эвотор не будет передавать пустые необязательные (не отмеченные как Required) поля.
 
    ## Вебхуки
