unknown fields reference removed

--- a/responses.yaml
+++ b/responses.yaml
@@ -35,7 +35,7 @@
               description: |
                 Код ошибки в облаке Эвотор. Возможные значения:
                   * 2001 - cинтаксическая ошибка в запросе.
-                  * 2002 - в запросе отсутствует обязательное поле и / или присутствуют неизвестные поля.
+                  * 2002 - в запросе отсутствует обязательное поле.
               type: integer
             reason:
               description: Причина возникновения ошибки.
