--- a/paths.yaml
+++ b/paths.yaml
@@ -693,7 +693,22 @@
                           - ALCOHOL_NOT_MARKED
                           - SERVICE
                       measureName:
-                        - $ref: 'definitions/#measureName'
+                        type: string
+                        description: >-
+                          Единица измерения для товара, не может быть`null`. Товароучётные системы могут задавать свои единицы измерения, например, "пара", "палета", "карат" и т.д.. Для групп товаров указывается "";
+                        enum:
+                          - ''
+                          - шт
+                          - кг
+                          - л
+                          - м
+                          - км
+                          - м2
+                          - м3
+                          - компл
+                          - упак
+                          - ед
+                          - дроб
                       quantity:
                         type: number
                         description: Количество товара
