--- a/definitions.yaml
+++ b/definitions.yaml
@@ -238,7 +238,22 @@ product:
       maximum: 9999999.99
       description: Закупочная цена; для групп товаров - 0; не может быть null
     measureName:
-      - $ref: '#/measureName'
+      type: string
+      description: >-
+        Единица измерения для товара, не может быть`null`. Товароучётные системы могут задавать свои единицы измерения, например, "пара", "палета", "карат" и т.д.. Для групп товаров указывается "";
+      enum:
+        - ''
+        - шт
+        - кг
+        - л
+        - м
+        - км
+        - м2
+        - м3
+        - компл
+        - упак
+        - ед
+        - дроб
     tax:
       type: string
       description: >-
@@ -709,7 +724,22 @@ receipt:
           barcode:
             type: string
           measureName:
-            - $ref: '#/measureName'
+            type: string
+            description: >-
+              Единица измерения для товара, не может быть`null`. Товароучётные системы могут задавать свои единицы измерения, например, "пара", "палета", "карат" и т.д.. Для групп товаров указывается "";
+            enum:
+              - ''
+              - шт
+              - кг
+              - л
+              - м
+              - км
+              - м2
+              - м3
+              - компл
+              - упак
+              - ед
+              - дроб
           quantity:
             type: number
             description: Кол-во товара.
@@ -817,7 +847,22 @@ receipt2:
                       ("ALCOHOL_MARKED"), немаркированный алкоголь("ALCOHOL_NOT_MARKED");
                       для групп товаров - "NORMAL"; не может быть null
               measureName:
-                - $ref: '#/measureName'
+                type: string
+                description: >-
+                  Единица измерения для товара, не может быть`null`. Товароучётные системы могут задавать свои единицы измерения, например, "пара", "палета", "карат" и т.д.. Для групп товаров указывается "";
+                enum:
+                  - ''
+                  - шт
+                  - кг
+                  - л
+                  - м
+                  - км
+                  - м2
+                  - м3
+                  - компл
+                  - упак
+                  - ед
+                  - дроб
               quantity:
                 type: number
                 description: кол-во товара
