--- a/paths.yaml
+++ b/paths.yaml
@@ -742,7 +742,7 @@
                 extras:
                   type: object
                   description: |
-                    Дополнительные поля. Например, поля пользователей программ лояльности. Поля передаются только в те сторонние сервисы, где они были созданы.
+                    Дополнительные поля. Например, поля пользователей программ лояльности. Поля хранятся в контексте приложения. При отправке в сторонний сервис, Облако Эвотор фильтрует поля таким образом, что сторонний сервис получает только те поля которые были созданы соответствующим приложением, установленным на терминале.
     responses:
       '200':
         description: OK
