--- a/paths.yaml
+++ b/paths.yaml
@@ -1011,7 +1011,7 @@
      - Товары и документы
     summary: 'Получить остатки товаров в магазине'
     description: |
-        Возвращает информацию об остатках всех товаров в определённом магазине (`{storeUuid}`) пользователя платформы.
+        Возвращает информацию об остатках всех товаров в определённом магазине (`{storeUuid}`) пользователя платформы. Ответ содержит JSON-объект с набором пар {"идентификатор товара": "остаток"} (см. пример ответа).
     parameters:
       - $ref: ./parameters.yaml#/auth
       - $ref: ./parameters.yaml#/storeUuid
@@ -1019,6 +1019,8 @@
     responses:
       '200':
         description: OK
+        examples:
+            application/json: { "35fac185-8e78-4495-b7d2-7a3aac129356:" 1.23, "a0128ed3-06b6-4dd3-99f6-6eb8f5545b80": "2.0" }
       '401':
         $ref: ./responses.yaml#/40110021003
 
