--- a/paths.yaml
+++ b/paths.yaml
@@ -1011,7 +1011,7 @@
      - Товары и документы
     summary: 'Получить остатки товаров в магазине'
     description: |
-        Возвращает информацию об остатках всех товаров в определённом магазине (`{storeUuid}`) пользователя платформы. Ответ содержит JSON-объект с набором пар {"идентификатор товара": "остаток"} (см. пример ответа).
+        Возвращает информацию об остатках всех товаров в определённом магазине (`{storeUuid}`) пользователя платформы. Ответ содержит JSON-объект с набором пар {"идентификатор товара" - "остаток"} (см. пример ответа).
     parameters:
       - $ref: ./parameters.yaml#/auth
       - $ref: ./parameters.yaml#/storeUuid
