--- a/paths.yaml
+++ b/paths.yaml
@@ -559,37 +559,37 @@
         $ref: ./responses.yaml#/4051005
 
 
-/partner.ru/api/v1/receipts:
-  post:
-    tags:
-      - Вебхуки-уведомления
-    summary: 'Отправить чек (V1) [DEPRECATED]'
-    description: |
-      После оплаты отправляет чек в сторонний сервис. Тело запроса содержит один или несколько чеков.
-    deprecated: true
-    parameters:
-      - $ref: ./parameters.yaml#/clientAuth
-      - name: receipt
-        in: body
-        description: Массив чеков.
-        required: true
-        schema:
-          type: array
-          items:
-            $ref: ./definitions.yaml#/receipt
-    responses:
-      '200':
-        description: OK
-      '400':
-        $ref: ./responses.yaml#/40020012003
-      '401':
-        $ref: ./responses.yaml#/40110021003
-      '402':
-        $ref: ./responses.yaml#/402
-      '404':
-        $ref: ./responses.yaml#/404
-      '405':
-        $ref: ./responses.yaml#/4051005
+#/partner.ru/api/v1/receipts:
+#  post:
+#    tags:
+#      - Вебхуки-уведомления
+#    summary: 'Отправить чек (V1) [DEPRECATED]'
+#    description: |
+#      После оплаты отправляет чек в сторонний сервис. Тело запроса содержит один или несколько чеков.
+#    deprecated: true
+#    parameters:
+#      - $ref: ./parameters.yaml#/clientAuth
+#      - name: receipt
+#        in: body
+#        description: Массив чеков.
+#        required: true
+#        schema:
+#          type: array
+#          items:
+#            $ref: ./definitions.yaml#/receipt
+#    responses:
+#      '200':
+#        description: OK
+#      '400':
+#        $ref: ./responses.yaml#/40020012003
+#      '401':
+#        $ref: ./responses.yaml#/40110021003
+#      '402':
+#        $ref: ./responses.yaml#/402
+#      '404':
+#        $ref: ./responses.yaml#/404
+#      '405':
+#        $ref: ./responses.yaml#/4051005
 
 /partner.ru/api/v1/receipt:
   post:
