--- a/paths.yaml
+++ b/paths.yaml
@@ -202,13 +202,25 @@
        format: date-time
        type: string
        description: |
-         Ответ будет содержать документы, созданные до указанной даты. Формат времени - 2017-01-10T09:33:19.757+0000
+         Дата окончания выборки. Ответ содержит документы, созданные до указанной даты.
+
+         Если не заданы даты начала и окончания выборки, возвращаются документы созданные за последний месяц с текущей даты.
+
+         Максимальный период выборки – шесть месяцев. Если задана выборка больше шести месяцев, Облако Эвотор ответит ошибкой.
+
+         Формат времени - 2017-01-10T09:33:19.757+0000
      - name: gtCloseDate
        in: query
        format: date-time
        type: string
        description: |
-         Ответ будет содержать документы, созданные после указанной даты. Формат времени - 2017-01-10T09:33:19.757+0000
+         Дата начала выборки. Ответ содержит документы, созданные после указанной даты.
+
+         Если не заданы даты начала и окончания выборки, возвращаются документы созданные за последний месяц с текущей даты.
+
+         Максимальный период выборки – шесть месяцев. Если задана выборка больше шести месяцев, Облако Эвотор ответит ошибкой.
+
+         Формат времени - 2017-01-10T09:33:19.757+0000
      - name: types
        description: |
          Ответ будет содержать документы определенных типов. Можно указать несколько типов через запятую. Возможные значения:
@@ -375,59 +387,59 @@
         $ref: ./responses.yaml#/4092005
 
 
-/partner.ru/api/v1/user/tariff:
-  post:
-    tags:
-      - Вебхуки-запросы
-    summary: 'Активация / деактивация тарифа'
-    description: |
-      **Важно:** Не рекомендуется использовать этот метод. Используйте события биллинга.
-      Активация / деактивация тарифа для учетной записи пользователя в стороннем сервисе.
-    parameters:
-      - $ref: ./parameters.yaml#/serverAuth
-      - name: ''
-        in: body
-        description: |
-          Параметры, необходимые для активации тарифа в стороннем сервисе.
-        required: true
-        schema:
-          type: object
-          required:
-            - userUuid
-            - tariffId
-            - status
-          properties:
-            userUuid:
-              type: string
-              description: |
-                **Важно:** Параметр `userUuid` к августу будет заменён на параметр `userId`. Используйте новое наименование параметра.
+#/partner.ru/api/v1/user/tariff:
+#  post:
+#    tags:
+#      - Вебхуки-запросы
+#    summary: 'Активация / деактивация тарифа'
+#    description: |
+#      **Важно:** Не рекомендуется использовать этот метод. Используйте события биллинга.
+#      Активация / деактивация тарифа для учетной записи пользователя в стороннем сервисе.
+#    parameters:
+#      - $ref: ./parameters.yaml#/serverAuth
+#      - name: ''
+#        in: body
+#        description: |
+#          Параметры, необходимые для активации тарифа в стороннем сервисе.
+#        required: true
+#        schema:
+#          type: object
+#          required:
+#            - userUuid
+#            - tariffId
+#            - status
+#          properties:
+#            userUuid:
+#              type: string
+#              description: |
+#                **Важно:** Параметр `userUuid` к августу будет заменён на параметр `userId`. Используйте новое наименование параметра.
 
-                Идентификатор пользователя в облаке Эвотор.
-              pattern: '^[0-9]{2}-[0-9]{15}$'
-              example: 01-000000000000001
-            tariffId:
-              type: string
-              description: Код тарифа в платформе Эвотор.
-              pattern: '^[a-zA-Z0-9\_\-]+$'
-              default: starter
-            status:
-              type: string
-              description: >-
-                Статус тарифа. Возможные значения:
-                 * ACTIVE -  установка приложения или подтверждение активности тарифа.
-                 * INACTIVE - удаление приложение или деактивация тарифа из-за неоплаты.
-              enum:
-                - ACTIVE
-                - INACTIVE
-    responses:
-      '200':
-        description: OK
-      '400':
-        $ref: ./responses.yaml#/40020012002
-      '401':
-        $ref: ./responses.yaml#/4011001
-      '404':
-        $ref: ./responses.yaml#/404
+#                Идентификатор пользователя в облаке Эвотор.
+#              pattern: '^[0-9]{2}-[0-9]{15}$'
+#              example: 01-000000000000001
+#            tariffId:
+#              type: string
+#              description: Код тарифа в платформе Эвотор.
+#              pattern: '^[a-zA-Z0-9\_\-]+$'
+#              default: starter
+#            status:
+#              type: string
+#              description: >-
+#                Статус тарифа. Возможные значения:
+#                 * ACTIVE -  установка приложения или подтверждение активности тарифа.
+#                 * INACTIVE - удаление приложение или деактивация тарифа из-за неоплаты.
+#              enum:
+#                - ACTIVE
+#                - INACTIVE
+#    responses:
+#      '200':
+#        description: OK
+#      '400':
+#        $ref: ./responses.yaml#/40020012002
+#      '401':
+#        $ref: ./responses.yaml#/4011001
+#      '404':
+#        $ref: ./responses.yaml#/404
 
 
 /partner.ru/api/v1/commodities:
