--- a/paths.yaml
+++ b/paths.yaml
@@ -319,8 +319,9 @@
             hasBilling:
               type: boolean
               description: |
-                Определяет наличие биллинга по данному пользователю в стороннем сервисе. Эвотор не выполняет биллинг, если на момент авторизации пользователь оплачивает подписку в стороннем сервисе.
-                Работает, когда учётная запись, первоначально зарегестрированна через интерфей партнёра.
+                Определяет наличие подписки пользователя в стороннем сервисе. Эвотор не взимает плату, если на момент авторизации пользователь оплачивает подписку в стороннем сервисе.
+
+                Работает, когда учётная запись, первоначально зарегестрированна с помощью интерфейса партнёра.
             token:
               description: |
                 Токен, который облако Эвотор будет передавать в заголове `Authorization` с типом `Bearer`, для авторизации своих HTTP-запросов в стороннем сервисе.
@@ -817,9 +818,9 @@
   post:
     tags:
       - Вебхуки-уведомления
-    summary: 'События биллинга'
+    summary: 'События подписки'
     description: |
-       Связанные с биллингом события, которые облако Эвотор передаёт в сторонний сервис. Облако выполняет попытки передать события в течение трёх суток, до тех пор пока не будет получен ответ об успешной доставке сообщения (200ОК). Интервал повторной отправки события около одной минуты.
+       Связанные с подпиской пользователей события, которые облако Эвотор передаёт в сторонний сервис. Облако выполняет попытки передать события в течение трёх суток, до тех пор пока не будет получен ответ об успешной доставке сообщения (200ОК). Интервал повторной отправки события около одной минуты.
     parameters:
       - name: Authorization
         in: header
